Make use of modern data type factories