@@ -23,7 +23,6 @@ import io.github.spannm.jackcess.*;
 import io.github.spannm.jackcess.Database.FileFormat;
 import junit.framework.TestCase;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
@@ -45,47 +44,47 @@ public class PatternColumnPredicateTest extends TestCase {
             Table t = db.getTable("Test");
 
             assertEquals(
-                Arrays.asList("Foo", "some row", "aNoThEr row", "nonsense"),
+                List.of("Foo", "some row", "aNoThEr row", "nonsense"),
                 findRowsByPattern(
                     t, PatternColumnPredicate.forJavaRegex(".*o.*")));
 
             assertEquals(
-                Arrays.asList("Bar", "0102", "FOO", "BAR", "67", "bunch_13_data", "42 is the ANSWER", "[try] matching t.h+i}s"),
+                List.of("Bar", "0102", "FOO", "BAR", "67", "bunch_13_data", "42 is the ANSWER", "[try] matching t.h+i}s"),
                 findRowsByPattern(
                     t, PatternColumnPredicate.forJavaRegex(".*o.*").negate()));
 
             assertEquals(
-                Arrays.asList("Foo", "some row", "FOO", "aNoThEr row", "nonsense"),
+                List.of("Foo", "some row", "FOO", "aNoThEr row", "nonsense"),
                 findRowsByPattern(
                     t, PatternColumnPredicate.forAccessLike("*o*")));
 
             assertEquals(
-                Arrays.asList("0102", "67", "bunch_13_data", "42 is the ANSWER"),
+                List.of("0102", "67", "bunch_13_data", "42 is the ANSWER"),
                 findRowsByPattern(
                     t, PatternColumnPredicate.forAccessLike("*##*")));
 
             assertEquals(
-                Arrays.asList("42 is the ANSWER"),
+                List.of("42 is the ANSWER"),
                 findRowsByPattern(
                     t, PatternColumnPredicate.forAccessLike("## *")));
 
             assertEquals(
-                Arrays.asList("Foo"),
+                List.of("Foo"),
                 findRowsByPattern(
                     t, PatternColumnPredicate.forSqlLike("F_o")));
 
             assertEquals(
-                Arrays.asList("Foo", "FOO"),
+                List.of("Foo", "FOO"),
                 findRowsByPattern(
                     t, PatternColumnPredicate.forSqlLike("F_o", true)));
 
             assertEquals(
-                Arrays.asList("[try] matching t.h+i}s"),
+                List.of("[try] matching t.h+i}s"),
                 findRowsByPattern(
                     t, PatternColumnPredicate.forSqlLike("[try] % t.h+i}s")));
 
             assertEquals(
-                Arrays.asList("bunch_13_data"),
+                List.of("bunch_13_data"),
                 findRowsByPattern(
                     t, PatternColumnPredicate.forSqlLike("bunch\\_%\\_data")));
 
